<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FordActivity">


    <ImageView
        android:scaleType="centerCrop"
        android:padding="20dp"
        android:src="@drawable/ford"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/app_name" />


    <TextView
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/ford"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/ford_motor_company_is_an_american_multinational_automobile_manufacturer_headquartered_in_dearborn_michigan_united_states_it_was_founded_by_henry_ford_and_incorporated_on_june_16_1903_the_company_sells_automobiles_and_commercial_vehicles_under_the_ford_brand_and_luxury_cars_under_its_lincoln_luxury_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>